--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-CONTRACT_ADDRESS=0x196c4C7291D47BCDBbf37ab7ec9AE7ECB21Aef52
-COLLECTION_SLUG=picassopunks
-DISCORD_BOT_TOKEN=SBI1MDI0NzUyNDQ3NzgyOTEz.YF36LQ.Sw-rczOfalK0lVzuW8vBjjcnsy0
-DISCORD_CHANNEL_ID=123456789101112130
+CONTRACT_ADDRESS=0x495f947276749ce646f68ac8c248420045cb7b5e
+COLLECTION_SLUG=Monsters_On_WallStreet
+DISCORD_BOT_TOKEN=ODg1MDIxMzQ4ODUyODIyMDY2.YTg-XA.2dJRmWKt-dlv4FZTAjNdbc0wE5Q
+DISCORD_CHANNEL_ID=885029196328476692
